--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>Meus Gráficos</title>
   </head>
   <body>
-    <h1>Gráfico 1</h1>
-    <img height="400" width="600">
-    <h1>Gráfico 2</h1>
-    <img height="400" width="600">
+    <h1>Gráfico 3</h1>
+    <img src="grafic_folder/grafico_3.png">
+    <h1>Gráfico 4</h1>
+    <img src="grafic_folder/grafico_4.png">
+    <h1>Gráfico 5</h1>
+    <img src="grafic_folder/grafico_5.png">
   </body>
 </html>
