Corrigindo main e analise_paulo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <h1>Gráfico 3</h1>
-    <img src="grafic_folder/grafico_3.png">
+    <img src="graphic_folder/grafico_3.png">
     <h1>Gráfico 4</h1>
-    <img src="grafic_folder/grafico_4.png">
+    <img src="graphic_folder/grafico_4.png">
     <h1>Gráfico 5</h1>
-    <img src="grafic_folder/grafico_5.png">
+    <img src="graphic_folder/grafico_5.png">
   </body>
 </html>
