Adicionei um gráfico a main

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <img src="graphic_folder/grafico_4.png">
     <h1>Gráfico 5</h1>
     <img src="graphic_folder/grafico_5.png">
+    <h1>Gráfico 6</h1>
+    <img src="graphic_folder/grafico_6.png">
   </body>
 </html>
