--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Meus Gráficos</title>
   </head>
   <body>
+    <h1>Gráfico 1</h1>
+    <img src="graphic_folder/grafico_1.png">
+    <h1>Gráfico 2</h1>
+    <img src="graphic_folder/grafico_2.png">
     <h1>Gráfico 3</h1>
     <img src="graphic_folder/grafico_3.png">
     <h1>Gráfico 4</h1>
