--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Meus Gráficos</title>
+    <title>Meus GrÃ¡ficos</title>
   </head>
   <body>
-    <h1>Gráfico 1</h1>
+    <h1>GrÃ¡fico 1</h1>
     <img src="graphic_folder/grafico_1.png">
-    <h1>Gráfico 2</h1>
+    <h1>GrÃ¡fico 2</h1>
     <img src="graphic_folder/grafico_2.png">
-    <h1>Gráfico 3</h1>
+    <h1>GrÃ¡fico 3</h1>
     <img src="graphic_folder/grafico_3.png">
-    <h1>Gráfico 4</h1>
+    <h1>GrÃ¡fico 4</h1>
     <img src="graphic_folder/grafico_4.png">
-    <h1>Gráfico 5</h1>
+    <h1>GrÃ¡fico 5</h1>
     <img src="graphic_folder/grafico_5.png">
-    <h1>Gráfico 6</h1>
+    <h1>GrÃ¡fico 6</h1>
     <img src="graphic_folder/grafico_6.png">
   </body>
 </html>
