Terminadas as plotagens com as devidas correções

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Meus GrÃ¡ficos</title>
+    <title>Gráficos</title>
   </head>
   <body>
-    <h1>GrÃ¡fico 1</h1>
-    <img src="graphic_folder/grafico_1.png">
-    <h1>GrÃ¡fico 2</h1>
-    <img src="graphic_folder/grafico_2.png">
-    <h1>GrÃ¡fico 3</h1>
-    <img src="graphic_folder/grafico_3.png">
-    <h1>GrÃ¡fico 4</h1>
-    <img src="graphic_folder/grafico_4.png">
-    <h1>GrÃ¡fico 5</h1>
-    <img src="graphic_folder/grafico_5.png">
-    <h1>GrÃ¡fico 6</h1>
-    <img src="graphic_folder/grafico_6.png">
+    <h1>Gráfico 1</h1>
+    <img src="graphic_folder/grafico_01.png">
+    <h1>Gráfico 2</h1>
+    <img src="graphic_folder/grafico_02.png">
+    <h1>Gráfico 3</h1>
+    <img src="graphic_folder/grafico_03.png">
+    <h1>Gráfico 4</h1>
+    <img src="graphic_folder/grafico_04.png">
+    <h1>Gráfico 5</h1>
+    <img src="graphic_folder/grafico_05.png">
+    <h1>Gráfico 6</h1>
+    <img src="graphic_folder/grafico_06.png">
+    <h1>Gráfico 7</h1>
+    <img src="graphic_folder/grafico_07.png">
+    <h1>Gráfico 8</h1>
+    <img src="graphic_folder/grafico_08.png">
+    <h1>Gráfico 9</h1>
+    <img src="graphic_folder/grafico_09.png">
+    <h1>Gráfico 10</h1>
+    <img src="graphic_folder/grafico_10.png">
   </body>
 </html>
